Temporary fix for table width on small screens

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -172,6 +172,9 @@ td:first-child {
   white-space: nowrap;
   padding-right: 10px;
   vertical-align: top;
+  @media (max-width: 405px) {
+    white-space: normal;
+  }
 }
 
 ::selection {
